[FIXED #92989872] Problem with photo adding component.
In caihp add new member, the photo component caused
screen to scroll horizontally. Now the content fits screen
without scrollbars.

--- a/src/client/scss/x/_uploadable-image.scss
+++ b/src/client/scss/x/_uploadable-image.scss
@@ -78,7 +78,7 @@
 		}
 
 		.x-modalview .x-modalview-window {
-			visibility: hidden;
+			display: none;
 			position: absolute;
 			width: 90%;
 			height: 90%;
@@ -99,7 +99,7 @@
 		}
 
 		.x-modalview.x-open .x-modalview-window {
-			visibility: visible;
+			display: block;
 		}
 
 		.x-modalview.x-open .x-modalview-header, .x-modalview.x-open .x-modalview-close {
